# VkEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: basiclit.frag  basiclit.frag.spv  basiclit.vert  basiclit.vert.spv  basicshadow.frag  basicshadow.mesh  basicshadow.vert  blit.frag  blur.comp  blur.frag  fullscreen.vert  gbuffer.frag  gbuffer.vert  object_buffer.inl  rayshadows.comp  ssao.comp  ssao.frag  ssao_flip.frag  ssao_taa.frag  taskshader_pass.task  texture_samplers.inl
assets/shaders/cubemap/: filtercube.vert  irradiancecube.frag  prefilterenvmap.frag
modules/: CMakeLists.txt
modules/scene_processor/: CMakeLists.txt  pch.h
modules/scene_processor/private/: gl_format.h  scene_processor.cpp  vk_format.h
modules/scene_processor/public/: scene_processor.h
modules/shader_processor/: CMakeLists.txt
modules/shader_processor/private/: shader_processor.cpp
modules/shader_processor/public/: shader_processor.h
modules/vulkan_api/: CMakeLists.txt  pch.h
modules/vulkan_api/private/: vk_device.cpp  vk_initializers.cpp
modules/vulkan_api/public/: vk_device.h  vk_flags.h  vk_initializers.h  vk_types.h
src/: CMakeLists.txt  NsightAftermathGpuCrashTracker.cpp  NsightAftermathGpuCrashTracker.h  NsightAftermathHelpers.h  NsightAftermathShaderDatabase.cpp  NsightAftermathShaderDatabase.h  autobind.cpp  autobind.h  camera_saver.cpp  camera_saver.h  command_decoder.cpp  command_encoder.cpp  command_encoder.h  components.h  cubemap_loader.cpp  cubemap_loader.h  descriptor_allocator.cpp  descriptor_allocator.h  engine_ui.cpp  engine_ui.h  frame_resource.h  framegraph.cpp  framegraph.h  frustum_cull.h  linear_allocator.h  main.cpp  murmurhash.h  object_type_string_helper.h  pcheader.h  player_camera.cpp  player_camera.h  rawbuffer.h  sdl_render.cpp  sdl_render.h  shader_parameters.cpp  shader_parameters.h  slotbuffer.h  stb_libs.cpp  vmath.cpp  vmath.h  (+13 more)
